--- a/_config.yml
+++ b/_config.yml
@@ -41,3 +41,7 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+exclude: [Gemfile, 
+          Gemfile.lock, 
+          wp_importer/]
