Importing wordpress content in markdown, but not importing the images yet.

--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,8 @@ plugins:
 #   - vendor/gems/
 #   - vendor/ruby/
 
-exclude: [Gemfile, 
-          Gemfile.lock, 
+exclude: [Gemfile,
+          Gemfile.lock,
           wp_importer/]
+
+port: 4001
