--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,8 @@ description: > # this means to ignore newlines until "baseurl:"
   some research or thoughts of my own.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
+permalink: /:year/:month/:title.html
+
 twitter_username: htmfilho
 github_username:  htmfilho
 
