--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ description: > # this means to ignore newlines until "baseurl:"
   for. I do my best to publish exclusive content, which usually comes out after
   some research or thoughts of my own.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://www.hildeberto.com" # the base hostname & protocol for your site, e.g. http://example.com
 permalink: /:year/:month/:title.html
 
 twitter_username: htmfilho
