--- a/_data/books.yml
+++ b/_data/books.yml
@@ -1,13 +1,43 @@
+- title: The Beauty of Discomfort
+  author: Amanda Lang
+  description: My family and I spent wonderful holidays in Canada this year and
+    I found this book in a Toronto bookstore, writen by a Canadian bestselling
+    author. It looks promising for our future plans. The book may teach me to
+    embrace discomfort as an important tool for success. That's what I believe
+    and I hope this book gives me all the reasons to keep believing that.
+  link: https://www.amazon.com/gp/product/1443449849/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1443449849&linkCode=as2&tag=c03ce-20&linkId=f6179be8171cef0d87ec66171359fcfd
+  image: //ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=US&ASIN=1443449849&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=c03ce-20
+  another_image: //ir-na.amazon-adsystem.com/e/ir?t=c03ce-20&l=am2&o=1&a=1443449849
+
 - title: Your Code as a Crime Scene
   author: Adam Tornhill
-  description: It explains how to use forensic techniques to arrest defects, bottlenecks, and bad design in our programmes.
+  description: <p>The book is good at investigating design issues, but not good
+    at solving them. Problems are exposed, but not discussed. The tools
+    presented aren't more than scripts that have to be executed manually and in
+    the right sequence. There is no dashboard or some sort of continuous
+    automated analysis to show the progress of the actions taken after the
+    diagnosis.</p>
+
+    <p>The text emphasizes the approach of analyzing the history of changes in
+    files based on version control logs, but I personally think that all
+    diagnosis shown in the book can also be done by a static analysis tool like
+    SonaQube.</p>
+
+    <p>Chapter 10, "Use Beauty as a Guiding Principle", was the most relevant
+    chapter for me. It really opened my mind to some aspects of programming. It
+    made the book worth reading.</p>
   link: https://www.amazon.com/gp/product/1680500384/ref=as_li_tl?ie=UTF8&tag=c03ce-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=1680500384&linkId=751044a1d3428473450283c75ebbad1e
   image: //ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=US&ASIN=1680500384&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=c03ce-20
   another_image: //ir-na.amazon-adsystem.com/e/ir?t=c03ce-20&l=am2&o=1&a=1680500384
 
 - title: Programming Beyond Practices
   author: Gregory T. Brown
-  description: Excellent book! Quite thin but valuable. The author explores the topics, which go from requirements discovery and rapid prototyping to business analysis and design for maintainability, describing real world situations. It is in the same category of The Phoenix Project and The Goal, but with more technical details and organized in short stories, instead of a long novel.
+  description: Excellent book! Quite thin but valuable. The author explores the
+    topics, which go from requirements discovery and rapid prototyping to
+    business analysis and design for maintainability, describing real world
+    situations. It is in the same category of The Phoenix Project and The Goal,
+    but with more technical details and organized in short stories, instead of a
+    long novel.
   link: https://www.amazon.com/gp/product/B01LYRCGA8/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=B01LYRCGA8&linkCode=as2&tag=c03ce-20&linkId=4723ca13b811faedab0b1b51b1ce654c
   image: //ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=US&ASIN=B01LYRCGA8&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=c03ce-20
   another_image: //ir-na.amazon-adsystem.com/e/ir?t=c03ce-20&l=am2&o=1&a=B01LYRCGA8
