--- a/_data/books.yml
+++ b/_data/books.yml
@@ -44,73 +44,108 @@
 
 - title: Unusual Uses For Olive Oil
   author: Alexander McCall Smith
-  description: Excellent book indeed! It's actually a big surprise to read a book published in 2011 that sounds like a classical from the 30's. It uses an irreproachable British English, with a modern vocabulary, of course. The characters have a provincial behaviour, running stories full of naiveness and simplicity, which are the main ingredients of this great comedy. Recommended!
+  description: Excellent book indeed! It's actually a big surprise to read a
+    book published in 2011 that sounds like a classical from the 30's. It uses
+    an irreproachable British English, with a modern vocabulary, of course. The
+    characters have a provincial behaviour, running stories full of naiveness
+    and simplicity, which are the main ingredients of this great comedy.
+    Recommended!
   link: https://www.amazon.com/gp/product/0307279898/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0307279898&linkCode=as2&tag=c03ce-20&linkId=dfde8a4fec2064d4afa13a0335e4af84
   image: //ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=US&ASIN=0307279898&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=c03ce-20
   another_image: //ir-na.amazon-adsystem.com/e/ir?t=c03ce-20&l=am2&o=1&a=0307279898
 
 - title: The Wave
   author: Todd Strasser
-  description:
+  description: Now I understand why and how some people follow believe systems
+    that completely ignore facts. Very good and short read!
   link: https://www.amazon.com/gp/product/0440993717/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0440993717&linkCode=as2&tag=c03ce-20&linkId=2176556b797a7ef456c3272aa04889c1
   image: //ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=US&ASIN=0440993717&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=c03ce-20
   another_image: //ir-na.amazon-adsystem.com/e/ir?t=c03ce-20&l=am2&o=1&a=0440993717
 
 - title: The Cicle
   author: Dave Eggers
-  description:
+  description: The book has a point, a very valid point about lack of privacy
+    that leads to totalitarianism, but it was so badly written, with so fragile
+    arguments. That's like using StarWars to show democracy is good, but no body
+    thinks about politics when watching StarWars. The stories were hard to
+    believe, weakly founded, almost scientific fiction, to show that social
+    networking may have some sort of hipnotic power over the population while
+    robotics might be the real threat nowadays.
   link: https://www.amazon.com/gp/product/0345807294/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0345807294&linkCode=as2&tag=c03ce-20&linkId=4896ff42d83878b12f02554c15c8911d
   image: //ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=US&ASIN=0345807294&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=c03ce-20
   another_image: //ir-na.amazon-adsystem.com/e/ir?t=c03ce-20&l=am2&o=1&a=0345807294
 
 - title: What If?
   author: Randall Munroe
-  description:
+  description: Very, very entertaining book for geeks! You will laugh a lot with
+    highly cleaver jokes based on serious science. Recommended!
   link: https://www.amazon.com/gp/product/0544272994/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0544272994&linkCode=as2&tag=c03ce-20&linkId=b502bc18d58655b1463af0cadcfd11a1
   image: //ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=US&ASIN=0544272994&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=c03ce-20
   another_image: //ir-na.amazon-adsystem.com/e/ir?t=c03ce-20&l=am2&o=1&a=0544272994
 
 - title: The Goldfinch
   author: Donna Tartt
-  description:
+  description: Very good, but a bit tiring. It could be heavily summarized
+    without any prejudice for the literary world. Recommend.
   link: https://www.amazon.com/gp/product/0316055441/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0316055441&linkCode=as2&tag=c03ce-20&linkId=ea30b5e22c70740fd954bc3991632897
   image: //ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=US&ASIN=0316055441&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=c03ce-20
   another_image: //ir-na.amazon-adsystem.com/e/ir?t=c03ce-20&l=am2&o=1&a=0316055441
 
 - title: The Martian
   author: Andy Weir
-  description:
+  description: Excellent! The best book I've ever read! Attention to details,
+    suspense, lots of rocket science, funny and intelligent. Better than the
+    movie.
   link: https://www.amazon.com/gp/product/0553418025/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0553418025&linkCode=as2&tag=c03ce-20&linkId=29f99d684ccabd73ebdc332f716d5c10
   image: //ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=US&ASIN=0553418025&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=c03ce-20
   another_image: //ir-na.amazon-adsystem.com/e/ir?t=c03ce-20&l=am2&o=1&a=0553418025
 
 - title: This Is Me
   author: Ian Thorpe
-  description:
+  description: Very good book! Despite been labeled as an autobiography and
+    written in first person, the book was actually written by a English ghost
+    writer. Ian lost a great opportunity to be honest about his sexuality. But
+    that's OK because I've learned a good deal of swimming techniques and the
+    mindset of a champion.
   link: https://www.amazon.com/gp/product/1471101231/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1471101231&linkCode=as2&tag=c03ce-20&linkId=93fa9cf23c7306a13e2128f5ab08545a
   image: //ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=US&ASIN=1471101231&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=c03ce-20
   another_image: //ir-na.amazon-adsystem.com/e/ir?t=c03ce-20&l=am2&o=1&a=1471101231
 
 - title: SuperFreakonomics
   author: Steven D. Levitt & Steven J. Dubner
-  description:
+  description: Very good book! Very addictive. It made me think twice before
+    every conclusion. Recommend.
   link: https://www.amazon.com/gp/product/0060889586/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0060889586&linkCode=as2&tag=c03ce-20&linkId=3cdc0686ccfbb906887ccb7502d18d7d
   image: //ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=US&ASIN=0060889586&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=c03ce-20
   another_image: //ir-na.amazon-adsystem.com/e/ir?t=c03ce-20&l=am2&o=1&a=0060889586
 
 - title: Gray Mountain
   author: John Grisham
-  description:
+  description: A book written for a specific target, which may not interest
+    someone living outside USA. A very boring reading with almost no suspense,
+    predictable.
   link: https://www.amazon.com/gp/product/038553714X/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=038553714X&linkCode=as2&tag=c03ce-20&linkId=25a4c4903ea71f494e3fe802ab031d3b
   image: //ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=US&ASIN=038553714X&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=c03ce-20
   another_image: //ir-na.amazon-adsystem.com/e/ir?t=c03ce-20&l=am2&o=1&a=038553714X
 
 - title: The Lost Symbol
   author: Dan Brown
-  description:
+  description: I gave 3 stars because the book is good, but it was a bit
+    disappointing in the end. Some people may like the end. It is quite
+    philosophical and makes totally sense, but it is not my cup of tea.
   link: https://www.amazon.com/gp/product/0385504225/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0385504225&linkCode=as2&tag=c03ce-20&linkId=2252074382669ed0fe9cd63ca7b29bed
   image: //ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=US&ASIN=0385504225&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=c03ce-20
   another_image: //ir-na.amazon-adsystem.com/e/ir?t=c03ce-20&l=am2&o=1&a=0385504225
+
+- title: Fernão Capelo Gaivota
+  author: Richard Bach
+  description: It would be selfish to review this book by its literary and
+    artistic characteristics, which are a bit poor, comparable to Paulo Coelho
+    popular style. I would heather evaluate it by its existence because I'm sure
+    there are a lot of people out there that need to read this words.
+  link: https://www.amazon.com/gp/product/8501060496/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=8501060496&linkCode=as2&tag=c03ce-20&linkId=9c877b4bbe4c78741f0868d5a7ab5279
+  image: //ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=US&ASIN=8501060496&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=c03ce-20
+  another_image: //ir-na.amazon-adsystem.com/e/ir?t=c03ce-20&l=am2&o=1&a=8501060496
 
 - title: Web Development With Clojure
   author: Dmitri Sotnikov
@@ -133,23 +168,40 @@
   image: //ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=US&ASIN=0553593544&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=c03ce-20
   another_image: //ir-na.amazon-adsystem.com/e/ir?t=c03ce-20&l=am2&o=1&a=0553593544
 
+- title: The Bookshop
+  author: Penelope Fitzgerald
+  description: unny story, but not worth reading, I'm afraid. This book actually
+    convinced me to read another book - Lolita - which I have in my bookshelf,
+    but never found motivation to read yet. Now I do.
+  link: https://www.amazon.com/gp/product/0006543545/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0006543545&linkCode=as2&tag=c03ce-20&linkId=68a8d440912995262893b88db39c4edc
+  image: //ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=US&ASIN=0006543545&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=c03ce-20
+  another_image: //ir-na.amazon-adsystem.com/e/ir?t=c03ce-20&l=am2&o=1&a=0006543545
+
 - title: The Curious Incident Of The Dog In The Night-Time
   author: Mark Haddon
   description:
-  link: https://www.amazon.com/gp/product/1400032717/ref=as_li_tl?ie=UTF8&tag=c03ce-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=1400032717&linkId=46022ade60bc076d210fbdfa4a13b202
-  image:
-  another_image:
+  link: https://www.amazon.com/gp/product/1400032717/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1400032717&linkCode=as2&tag=c03ce-20&linkId=631e6da6e6435d56015896e24fed8e78
+  image: //ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=US&ASIN=1400032717&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=c03ce-20
+  another_image: //ir-na.amazon-adsystem.com/e/ir?t=c03ce-20&l=am2&o=1&a=1400032717
 
 - title: To Kill a Mockingbird
   author: Harper Lee
   description:
-  link: https://www.amazon.com/gp/product/0446310786/ref=as_li_tl?ie=UTF8&tag=c03ce-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=0446310786&linkId=47fdff62d8968040c6a66a59262efa7c
-  image:
-  another_image:
+  link: https://www.amazon.com/gp/product/0060935464/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0060935464&linkCode=as2&tag=c03ce-20&linkId=f614fd9a6ef79f3c52d4ba3a223f4013
+  image: //ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=US&ASIN=0060935464&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=c03ce-20
+  another_image: //ir-na.amazon-adsystem.com/e/ir?t=c03ce-20&l=am2&o=1&a=0060935464
 
 - title: "The Lean Startup: How Constant Innovation Creates Radically Successful Businesses"
   author: Eric Ries
   description:
-  link: https://www.amazon.com/gp/product/B01K3QCJZE/ref=as_li_tl?ie=UTF8&tag=c03ce-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=B01K3QCJZE&linkId=67d28d5dfa163c6e2fde17ed8c7a2080
-  image:
-  another_image:
+  link: https://www.amazon.com/gp/product/0307887898/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0307887898&linkCode=as2&tag=c03ce-20&linkId=d3cc36720ee41f0da6798a369d2df87c
+  image: //ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=US&ASIN=0307887898&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=c03ce-20
+  another_image: //ir-na.amazon-adsystem.com/e/ir?t=c03ce-20&l=am2&o=1&a=0307887898
+
+- title: You Write, They Pay: How to Build a Thriving Writing Business from NOTHING!
+  author: Susan Anderson
+  description: I'm not planning to do that, but I certainly know how to do it
+    now. Very good book. Recommended.
+  link: https://www.amazon.com/gp/product/1942761686/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1942761686&linkCode=as2&tag=c03ce-20&linkId=d7659d32e3e6402aa8993e1712cc9aba
+  image: //ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=US&ASIN=1942761686&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=c03ce-20
+  another_image: //ir-na.amazon-adsystem.com/e/ir?t=c03ce-20&l=am2&o=1&a=1942761686
