Fixed YAML syntax issue

--- a/_data/books.yml
+++ b/_data/books.yml
@@ -198,7 +198,7 @@
   image: //ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=US&ASIN=0307887898&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=c03ce-20
   another_image: //ir-na.amazon-adsystem.com/e/ir?t=c03ce-20&l=am2&o=1&a=0307887898
 
-- title: You Write, They Pay: How to Build a Thriving Writing Business from NOTHING!
+- title: "You Write, They Pay: How to Build a Thriving Writing Business from NOTHING!"
   author: Susan Anderson
   description: I'm not planning to do that, but I certainly know how to do it
     now. Very good book. Recommended.
