--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@
 title: No Time To Make It Shorter
 author: Hildeberto Mendonça
 description: > # this means to ignore newlines until "baseurl:"
-  You are reading my personal website, where I share my own views, knowledge and
-  interests. I do not represent the views of my employer or anybody else I work
-  for. I do my best to publish exclusive content, which usually comes out after
-  some research or thoughts of my own.
+  This is my personal website, where I share my own views, knowledge and
+  interests. I don't represent the views of my employer or clients. I do my best
+  to publish exclusive content, which usually comes out after some research or
+  thoughts of my own.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://www.hildeberto.com" # the base hostname & protocol for your site, e.g. http://example.com
 permalink: /:year/:month/:title.html
