--- a/_data/books.yml
+++ b/_data/books.yml
@@ -1,10 +1,32 @@
+- title: Deep Work
+  author: Cal Newport
+  description: If somebody asks me about my defects, I would instintively answer
+    I'm a victim of a world of distractions. This book is a what I'm doing to
+    mitigate that.
+  link: https://www.amazon.com/gp/product/1455586692/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1455586692&linkCode=as2&tag=c03ce-20&linkId=e7d40c17bb1ef3f4b93753c9fb47f269
+  image: //ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=US&ASIN=1455586692&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=c03ce-20
+  another_image: //ir-na.amazon-adsystem.com/e/ir?t=c03ce-20&l=am2&o=1&a=1455586692
+
 - title: The Beauty of Discomfort
   author: Amanda Lang
-  description: My family and I spent wonderful holidays in Canada this year and
-    I found this book in a Toronto bookstore, writen by a Canadian bestselling
-    author. It looks promising for our future plans. The book may teach me to
-    embrace discomfort as an important tool for success. That's what I believe
-    and I hope this book gives me all the reasons to keep believing that.
+  description: <p>My family and I spent wonderful holidays in Canada this year
+    and I found this book in a Toronto bookstore, writen by a Canadian
+    bestselling author. Amanda proves her point about discomfort by telling
+    stories of people who have endured through their challenging achievements.
+    She made sure the stories were sufficiently different to cover most aspects
+    of discomfort. After finishing the book, it was clear to me that discomfort
+    is actually a personal game changer, but there is no beauty in it. So,
+    "Discomfort" would be enough as a title.</p>
+
+    <p>It was a pleasure to read this book. The text was really straight,
+    written in a journalistic style, almost like a modern documentary, crafted
+    to attract reader's attention.</p>
+
+    <p>I'm currently going through several changing processes, facing discomfort
+    in many levels. By reading this book I found the necessary assurance that
+    all I'm going through will effectively bring the results I'm looking for. I
+    just have to be patient, given that patience is another form of
+    discomfort.</p>
   link: https://www.amazon.com/gp/product/1443449849/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1443449849&linkCode=as2&tag=c03ce-20&linkId=f6179be8171cef0d87ec66171359fcfd
   image: //ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=US&ASIN=1443449849&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=c03ce-20
   another_image: //ir-na.amazon-adsystem.com/e/ir?t=c03ce-20&l=am2&o=1&a=1443449849
