--- a/_data/books.yml
+++ b/_data/books.yml
@@ -1,7 +1,7 @@
 - title: Deep Work
   author: Cal Newport
   description: If somebody asks me about my defects, I would instintively answer
-    I'm a victim of a world of distractions. This book is a what I'm doing to
+    I'm a victim of a world of distractions. This book is what I'm doing to
     mitigate that.
   link: https://www.amazon.com/gp/product/1455586692/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1455586692&linkCode=as2&tag=c03ce-20&linkId=e7d40c17bb1ef3f4b93753c9fb47f269
   image: //ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=US&ASIN=1455586692&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=c03ce-20
