Added review of the bookDeep Work

--- a/_data/books.yml
+++ b/_data/books.yml
@@ -1,8 +1,65 @@
+- title: The First 90 Days
+  author: Michael D. Watkins
+  description: One of the concerns we have in a new job is how long it might
+    take to fullfil the expectations of the company. We try to work hard, learn
+    fast, be disciplined to be rapidly recognized, but are we doing it right?
+    That's a Harvard Business Review book, considered an international
+    bestseller and improved from its original release in 2003. Looking forward
+    to finish it!
+  link: https://www.amazon.com/gp/product/1422188612/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1422188612&linkCode=as2&tag=c03ce-20&linkId=2dc0cc5b7a87feee132a5990ccc0ecf3
+  image: //ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=US&ASIN=1422188612&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=c03ce-20
+  another_image: //ir-na.amazon-adsystem.com/e/ir?t=c03ce-20&l=am2&o=1&a=1422188612
+
 - title: Deep Work
   author: Cal Newport
-  description: If somebody asks me about my defects, I would instintively answer
-    I'm a victim of a world of distractions. This book is what I'm doing to
-    mitigate that.
+  description: <p>If somebody asks me about my defects, I would instintively
+    answer I'm a victim of a world of distractions. This book is what I did to
+    mitigate that.</p>
+
+    <p>Cal Newport is a very smart guy. He wrote a book that practically targets
+    everybody. Who doesn't have a certain level of attention deficit in a
+    increasing distracted world ? As a software engineer professional, I'm in
+    contact with computers all day long and there is nothing more distracting
+    than a device connected to the internet.</p>
+
+    <p>As I read the book, I was progressively realizing the amount of time I
+    was wasting with my choices, decisions and atitudes. I was also gradually
+    adopting the recommended practices, even involuntarily during the day. Some
+    of the things that changed in my routine are:</p>
+
+    <ul>
+      <li>IT professionals usually have multiple screens to show several tools
+      at the same time. I decided to drop my 2 x 27' screens in favor of my
+      laptop built-in screen. Now, I focus one thing at a time, reducing
+      distraction.</li>
+
+      <li>I disabled all automatic notifications on my laptop.</li>
+
+      <li>I listen to calm and relaxing music during the day to cancel the noise
+      around.</li>
+
+      <li>I uninstalled all social apps from my mobile phone (except LinkedIn).
+      Now I have to be in a desktop computer to use them. I also decided to be
+      reactive, accessing only in case of family and close frieds notifications,
+      instead of actively navigating through the timeline and giving feedback as
+      a primary thing to do. My frequence of use has been droping latelly
+      because of this atitude.</li>
+
+      <li>I spend more time with family and practice sports 4 times per week to
+      be constructively off-line from deep work.</li>
+
+      <li>We are selling everything we don't use anymore and discarding other
+      things in an environmental friendly way. It helps to get rid of
+      distractions and save some time cleaning and organizing the house.</li>
+    </ul>
+
+    <p>As a drawback, the book talks too much about negative things that
+    normally happens to everybody, but it got me distracted all the time,
+    thinking of my own problems. I frequently lost focus on the reading. I had
+    to get in meditation mood to be able to finish the book.</p>
+
+    <p>In summary, the book is very good and recommended for those wishing a day
+    with 30 hours.</p>
   link: https://www.amazon.com/gp/product/1455586692/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1455586692&linkCode=as2&tag=c03ce-20&linkId=e7d40c17bb1ef3f4b93753c9fb47f269
   image: //ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=US&ASIN=1455586692&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=c03ce-20
   another_image: //ir-na.amazon-adsystem.com/e/ir?t=c03ce-20&l=am2&o=1&a=1455586692
