Formatted text in the review.

--- a/_data/books.yml
+++ b/_data/books.yml
@@ -38,12 +38,12 @@
       <li>I listen to calm and relaxing music during the day to cancel the noise
       around.</li>
 
-      <li>I uninstalled all social apps from my mobile phone (except LinkedIn).
-      Now I have to be in a desktop computer to use them. I also decided to be
-      reactive, accessing only in case of family and close frieds notifications,
-      instead of actively navigating through the timeline and giving feedback as
-      a primary thing to do. My frequence of use has been droping latelly
-      because of this atitude.</li>
+      <li>I uninstalled all social apps from my mobile phone. Now I have to be
+      in a desktop computer to use them. I also decided to be reactive,
+      accessing only in case of family and close frieds notifications, instead
+      of actively navigating through the timeline and giving feedback as a
+      primary thing to do. My frequence of use has been droping latelly because
+      of this atitude.</li>
 
       <li>I spend more time with family and practice sports 4 times per week to
       be constructively off-line from deep work.</li>
