Fixed small typos

--- a/_data/books.yml
+++ b/_data/books.yml
@@ -12,7 +12,7 @@
 
 - title: Deep Work
   author: Cal Newport
-  description: <p>If somebody asks me about my defects, I would instintively
+  description: <p>If somebody asks me about my defects, I would instinctively
     answer I'm a victim of a world of distractions. This book is what I did to
     mitigate that.</p>
 
