Revert "Fixed small typo"
This reverts commit 713f1e0d64c33a2fefc341742edfbf58e60e91b5.

--- a/_data/books.yml
+++ b/_data/books.yml
@@ -23,7 +23,7 @@
     than a device connected to the internet.</p>
 
     <p>As I read the book, I was progressively realizing the amount of time I
-    was wasting with my choices, decisions and attitudes. I was also gradually
+    was wasting with my choices, decisions and atitudes. I was also gradually
     adopting the recommended practices, even involuntarily during the day. Some
     of the things that changed in my routine are:</p>
 
