--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://www.hildeberto.com" # the base hostname & protocol for your site, e.g. http://example.com
 permalink: /:year/:month/:title.html
+excerpt_separator: "<!-- more -->"
 
 twitter_username: htmfilho
 github_username: htmfilho
