Fixed typos in the book review.

--- a/_data/books.yml
+++ b/_data/books.yml
@@ -12,17 +12,17 @@
 - title: The First 90 Days
   author: Michael D. Watkins
   description: <p>One of the concerns we have in a new job is how long it might
-    take to fullfil the expectations of the company. We try to work hard, learn
+    take to fulfill the expectations of the company. We try to work hard, learn
     fast, be disciplined to be rapidly recognized, but are we doing it right?
     That's a Harvard Business Review book, considered an international
     bestseller and improved from its original release in 2003.</p>
 
-    <p>I have to agree this book is valuable and useful, but it is extremily
+    <p>I have to agree this book is valuable and useful, but it is extremely
     boring to read. I had a hard time to finish it, which was a different
-    experience from the last 2 books. Now, I'm releaved that I have it just as
-    a reference book, to be used when the transiction actually happens.</p>
+    experience from the last 2 books. Now, I'm relieved that I have it just as
+    a reference book, to be used when a transition actually happens.</p>
 
-    <p>Dispite the generic title, this is a book for managers. If you aren't
+    <p>Despite the generic title, this is a book for managers. If you aren't
     going to lead a team, a unit or a company, don't buy this book unless you
     want to get ready for your future boss.</p>
 
