--- a/_data/books.yml
+++ b/_data/books.yml
@@ -15,11 +15,36 @@
 
 - title: Head Strong
   author: Dave Asprey
-  description: In the book <a href="http://calnewport.com/books/deep-work/"
+  description: <p>In the book <a href="http://calnewport.com/books/deep-work/"
     target="_blank">Deep Work</a>, I've learned the behavioral aspect of
     concentration, but there is also the physiological one, which is the quality
     of chemical reactions in the brain! That's what I'm looking forward in this
-    book.
+    book.</p>
+
+    <p>Well, Head Strong is provocative. If you aren't open to challenge your
+    concepts you may find it difficult to finish. I have decided to finish it
+    because I like to test my ideas with people I disagree with. It is quite
+    conforting to keep some of my convictions and constructive to change a bit
+    as well.</p>
+
+    <p>Reading Head Strong is like reading a programming language book. You
+    enjoy learning a new language but you know that the book will be outdated
+    soon due to the fast progress of the technology. In the case of Head Strong,
+    the fast progress of science. The author is sure about things that may not
+    be true anymore in a matter of years, months or even days.</p>
+
+    <p>The book is clearly selling a product called "Bullet Proof Diet". The
+    problem with diets is that even when we fell good with the results in the
+    short term, we don't stick to them for too long. This is due to the fact
+    that radical changes are disturbing and depressing. Changes are more
+    realistic when made in small and consistent doses over time. I remember one
+    year ago, when I went to restaurants and didn't even look at the salads in
+    the menu. Nowadays, I look at the salads and ignore the rest. This is an
+    educated change that built new habits over the period of one year. Anyway,
+    the book is good because it's informative, but we have to be careful about
+    some fragile arguments since people don't radically change in two weeks
+    (unless they are forced or in big trouble).</p>
+
   link: https://www.amazon.com/gp/product/0062652419/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0062652419&linkCode=as2&tag=c03ce-20&linkId=f8b3e1d9484b14bfd6865a41e0b18778
   image: //ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=US&ASIN=0062652419&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=c03ce-20
   another_image: //ir-na.amazon-adsystem.com/e/ir?t=c03ce-20&l=am2&o=1&a=0062652419
