Fixed small typos in the last book review.

--- a/_data/books.yml
+++ b/_data/books.yml
@@ -18,13 +18,12 @@
   description: <p>In the book <a href="http://calnewport.com/books/deep-work/"
     target="_blank">Deep Work</a>, I've learned the behavioral aspect of
     concentration, but there is also the physiological one, which is the quality
-    of chemical reactions in the brain! That's what I'm looking forward in this
-    book.</p>
+    of chemical reactions in the brain!</p>
 
     <p>Well, Head Strong is provocative. If you aren't open to challenge your
     concepts you may find it difficult to finish. I have decided to finish it
     because I like to test my ideas with people I disagree with. It is quite
-    conforting to keep some of my convictions and constructive to change a bit
+    comforting to keep some of my convictions and constructive to change a bit
     as well.</p>
 
     <p>Reading Head Strong is like reading a programming language book. You
