Fixed some small typos in my last book review.

--- a/_data/books.yml
+++ b/_data/books.yml
@@ -21,10 +21,10 @@
     of chemical reactions in the brain!</p>
 
     <p>Well, Head Strong is provocative. If you aren't open to challenge your
-    concepts you may find it difficult to finish. I have decided to finish it
-    because I like to test my ideas with people I disagree with. It is quite
-    comforting to keep some of my convictions and constructive to change a bit
-    as well.</p>
+    prestablished concepts you may find difficult to finish it. I have finished 
+    it because I like to test my ideas with people I disagree with. It is quite
+    comforting to keep some of my beliefs, but it is also constructive to change 
+    a bit as well.</p>
 
     <p>Reading Head Strong is like reading a programming language book. You
     enjoy learning a new language but you know that the book will be outdated
