Rephrased some sentences.

--- a/_data/books.yml
+++ b/_data/books.yml
@@ -1,6 +1,6 @@
 - title: "Soft Skills: The software developer's life manual"
   author: John Sonmez
-  description: We've been living in Belgium since 2006 and at this point we have absorbed a good deal of the European culture and lifestyle. Soon, we will move abroad and the cultural differences may certainly impact our working habits. To get ready for this shift, I've decided to read this book to get a good grasp of the North American working culture.
+  description: We've been living in Belgium since 2006 and at this point we have absorbed a good deal of the European culture and lifestyle. Soon, we will move abroad and the cultural differences may certainly impact our working habits. To get ready for this shift, I've decided to read this book to get a good grasp of a foreign working culture.
   link: https://www.amazon.com/gp/product/1617292397/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1617292397&linkCode=as2&tag=c03ce-20&linkId=f403142ce2787c220efd0889b131689c
   image: //ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=US&ASIN=1617292397&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=c03ce-20
   another_image: //ir-na.amazon-adsystem.com/e/ir?t=c03ce-20&l=am2&o=1&a=1617292397
